[package]
name = "minimal-socket-addr-error-example"
version = "0.1.0"
authors = ["Walter Smuts <wssmts@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["os-poll", "uds"] }
